# tasmanian-mismatch

./: .definitions.py  .fuse_hidden00001dce00000001  .gitignore  .intersections.py.swp  .manuscript.txt.swp  BED_FILTERING.md  Cargo.toml  LICENCE.txt  README.md  Tasmanian.xml  create_minimal_test.sh  find_pairs  integration_test.sh  intersections.py  jianscript.py  main.nf  manuscript.txt  nextflow.config  pixi.toml  process.yml  pyproject.toml  requirements.txt  run_tests.sh  setup.py  simple_pipeline.nf  tasmanian.py  tasmanian_v3.py  test_data_visualization.html  todo.md
.circleci/: config.yml
.github/workflows/: ci.yml
conf/: conda.yaml
docs/: RUST_REWRITE_PLAN.md
galaxy_wrapper/test-data/: small_region.fa  test.bam  test.output  test2.bam  test2.output
scripts/: .count_CpG_GC_repeat.py.swp  code_coverage.sh  count_CpG_GC_repeat.py  generate_test_data.py  hist.py  visualize.py
src/: bed.rs  control_flow.md  io.rs  lib.rs  main.rs  methylation.rs  processing.rs  tasmanian-diagnostics.rs  tasmanian-insert-mode.rs  tasmanian-mismatch.rs  tasmanian-rescale-quality.rs  types.rs  utils.rs  workflow.md
swit_tests/base_quality/: AGR1.fastq
swit_tests/genome/: small_region.fa.ann  small_region.fa.pac  small_region.fa.sa
swit_tests/mask_genome/: masked_genome.fa
swit_tests/soft_clips/: AGR1.fastq  smallb.csv
swit_tests/softclip_bed/: intersections.py  mini_test.bed  report_intersect.py
tasmanian/: ._tasmanian.py  __init__.py  manuscript.txt  manuscript_figures.pptx  tasmanian.py  tasmanian_script.py
tasmanian-rs/: Cargo.toml
tasmanian-rs/src/: analysis.rs  bed.rs  cli.rs  error_table.rs  intersection.rs  lib.rs  main.rs  output.rs  reference.rs
tasmanian-rs/src/sam/: flags.rs  mod.rs  record.rs
tasmanian/galaxy_wrapper/: Tasmanian.xml  tasmanian.py  tasmanian_galaxy.py  tool_test_output.html  tool_test_output.json
tasmanian/scripts/: collect_data.py  generate_reads.py  generate_variants.py  rescale.py  rescale.sh  run.sh  run_generation_of_reads.py  run_simulation_of_reads.sh  simulate_mutations.py  test_runs.py  variants_proposed.tsv
tasmanian/test_suite/: 50_test_reads_ONT.sam  bwa_and_RG.sh  colordiff.py  log-run_artifacts  original_read1.fastq  original_read2.fastq  picard_test_files  plotit.py  run.sh  run_artifacts.sh  sampler.sh  summary
tasmanian/test_suite/flags/: fails_quality.bam  fails_quality.sam  mate_umapped.bam  mate_umapped.sam  original.bam  summary  suppl_alignment.bam  suppl_alignment.sam
tasmanian/test_suite/genome/: small_region.dict  small_region.fa.amb  small_region.fa.bwt
tasmanian/test_suite/indel+soft_clip/: AGR2.fastq
tasmanian/test_suite/indel_filter/: AGR1.fastq
tasmanian/test_suite/map_quality/: AG.bam  (+1 more)
tasmanian/tests/: ._tasmanian.test.html  G_T.sorted.sam  Tasmanian_artifact_report-1.html  Tasmanian_artifact_report.html  basic_tests.sh  intersections_test.py  tasmanian_test.py  test_borrar.py  test_test.table.csv  try_test.py
tasmanian/utils/: ._intersections.py  ._utils.py  __init__.py  a.out  constants.py  csam_reads.pyx  intersections  intersections.c  intersections.py  lala.py  plot.py  read.c  read_bed.c  read_bed.h  sam_reads.py  test.bed  test2.bed  uthash.h  utils.c  utils.h  utils.py
test_data/: test_genome.fa  test_genome.fa.amb  test_genome.fa.ann  test_genome.fa.bwt  test_genome.fa.pac  test_genome.fa.sa
test_suite/soft_clips/: AGR1b.fastq  AGR2.fastq  AGR2b.fastq  small.csv
test_suite/softclip_bed/: intersections.py  mini_test.bed  mini_test.sam
tests/: all_binaries_and_pipes_integration.rs  diagnostics_integration.rs  mismatch_integration.rs  rescale_integration.rs  test_utils.rs  unit_tests.rs
tests/fixtures/: test_data.tsv
utils/: .sam_reads.py.swp  .utils.py.swp  sam_reads.py  utils.py
(+2 files in other folders)
