[package]
name = "rustmanian-mismatch"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = "0.47"
rayon = "1.10"
bio = "1.6"
clap = { version = "4.5", features = ["derive"] }

log = "0.4"
env_logger = "0.11"

[[bin]]
name = "tasmanian-rescale-quality"
path = "src/tasmanian-rescale-quality.rs"

[[bin]]
name = "tasmanian-mismatch"
path = "src/tasmanian-mismatch.rs"

[[bin]]
name = "tasmanian-diagnostics"
path = "src/tasmanian-diagnostics.rs"
