[package]
name = "rustmanian-mismatch"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = { version = "1.0.0", features = ["bindgen", "bzip2"] }
rayon = "1.12"
bio = "3.0"
clap = { version = "4.6.1", features = ["derive"] }

log = "0.4"
env_logger = "0.11"

[[bin]]
name = "tasmanian-rescale-quality"
path = "src/tasmanian-rescale-quality.rs"

[[bin]]
name = "tasmanian-mismatch"
path = "src/tasmanian-mismatch.rs"

[[bin]]
name = "tasmanian-diagnostics"
path = "src/tasmanian-diagnostics.rs"
